--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,25 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Dziel się i żartuj z znajomymi sucharami z najlepszej bazy w internecie!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <title>Najlepsze Suchary w sieci!</title>
+    <meta name="theme-color" content="#ffffff" />
+
+    <meta property="og:site_name" content="Najlepsze Suchary w sieci!" />
+    <meta content="object" property="og:type" />
+    <meta
+      property="og:title"
+      content="Dziel się i żartuj z znajomymi sucharami z najlepszej bazy w internecie!"
+    />
+    <meta property="og:url" content="https://kek-ivory.vercel.app/" />
+    <meta
+      content="Dziel się i żartuj z znajomymi sucharami z najlepszej bazy w internecie!"
+      property="og:description"
+    />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +40,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
